# local_completer_fastapi

./: LICENSE  README.md  main.py  pyproject.toml  test_api.ipynb
